manifests/06-deploy-wordpress.yml
apiVersion: apps/v1
kind: Deployment
metadata:
name: wordpress
spec:
replicas: 3
selector:
    matchLabels:
    app: wordpress
template:
    metadata:
    labels:
        app: wordpress
    spec:
      containers:
      - image: wordpress
        name: wordpress
        ports:
        - containerPort: 80
          name: wordpress
        volumeMounts:
            - name: nfs
            mountPath: /mnt/wordpress
    volumes:
        - name: nfs
        persistentVolumeClaim:
            claimName: nfs-pvc
