manifests/07-service-wordpress.yml
apiVersion: v1
kind: Service
metadata:
name: wordpress
spec:
selector:
    app: wordpress
ports:
    - protocol: TCP
    port: 80
    targetPort: 80
